opa_gatekeeper/constraint_templates/ingress-default-ingressclass-constraint.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: validateingressclass
spec:
  crd:  
    spec:
      names:
        kind: ValidateIngressClass
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package validateingressclass

        violation[{"msg": msg}] {
          c := "default"
          input.review.object.spec.ingressClassName == c
          msg := sprintf("ingress  %v is using default ingress class", [input.review.object.metadata.name])
        }
